--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
             android:name=".Feed"
             android:label="@string/app_name"/>
 
+        <activity android:name=".Register"
+            android:label="@string/app_name"/>
+
     </application>
 
 </manifest>
