--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,26 @@
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
             android:name=".Feed"
-            android:label="@string/app_name"/>
+            android:label="@string/app_name" />
 
-        <activity android:name=".Register"
-            android:label="@string/app_name"/>
+        <activity
+            android:name=".Register"
+            android:label="@string/app_name" />
+
+        <activity
+            android:name=".Scoreboard"
+            android:label="@string/app_name"
+            android:parentActivityName=".Feed">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Feed" />
+        </activity>
 
     </application>
 
