--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,17 @@
                 android:value=".Feed" />
         </activity>
 
+        <activity
+            android:name=".UserProfile"
+            android:label="@string/app_name"
+            android:parentActivityName=".Feed">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Feed" />
+        </activity>
+
+
+
     </application>
 
 </manifest>
