--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.android.support:design:26.1.0'
+    compile 'com.android.volley:volley:1.1.0'
 }
