--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    compile("org.springframework.boot:spring-boot-starter-security:1.4.1.RELEASE")
+    compile("org.springframework.security.oauth:spring-security-oauth2:2.0.11.RELEASE")
+    compile("org.springframework.cloud:spring-cloud-security:1.1.3.RELEASE")
+
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.volley:volley:1.1.0'
