--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,10 @@
                 android:value=".Feed" />
         </activity>
 
+        <activity android:name=".SchoolAndBirthdayRegisterActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".Login"/>
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -86,7 +90,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".FacebookRegisterActivity"></activity>
     </application>
 
 </manifest>
