--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,7 @@
         </activity>
 
         <activity android:name=".SchoolAndBirthdayRegisterActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"
             android:parentActivityName=".Login"/>
 
@@ -90,16 +91,6 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".Search.SearchActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
-            </intent-filter>
-            <meta-data
-                android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
-        </activity>
-
     </application>
 
 </manifest>
