--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
+    compile 'com.android.support:design:25.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
