--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,7 @@
         <activity
             android:name=".GroupHub"
             android:label="@string/app_name"
+            android:theme="@style/AppTheme"
             android:parentActivityName=".GroupList">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
