--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,15 @@
         </activity>
 
         <activity
+            android:name=".Events"
+            android:label="@string/app_name"
+            android:parentActivityName=".Feed">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Feed" />
+        </activity>
+
+        <activity
             android:name=".GroupList"
             android:label="@string/app_name"
             android:parentActivityName=".Feed">
