--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions.encoding = 'ISO-8859-1'
+    compileOptions.encoding = 'UTF-8'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
@@ -31,8 +32,9 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
-    compile 'com.android.support:design:25.0.1'
-    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.android.support:design:26.1.0'
+
+    implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
 }
 
 
