--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.android.volley:volley:1.1.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     compile 'com.android.support:design:26.1.0'
+    // https://mvnrepository.com/artifact/commons-codec/commons-codec
+    implementation group: 'commons-codec', name: 'commons-codec', version: '1.10'
+
 
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
 }
