On knot, when back button is pressed sends the user to knot list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,7 +147,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".WitnessSelection"></activity>
+        <activity android:name=".WitnessSelection"
+            android:windowSoftInputMode="adjustResize"
+            android:label="@string/app_name"
+            android:parentActivityName=".Knot"/>
     </application>
 
 </manifest>
