--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,6 +115,13 @@
                 android:value=".UserProfile" />
         </activity>
 
+        <activity android:name=".RussCardCamera"
+            android:label="@string/app_name"
+            android:parentActivityName=".UserProfile">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".UserProfile" />
+        </activity>
 
 
         <activity android:name=".BirthdayRegisterActivity"
@@ -152,5 +159,6 @@
             android:label="@string/app_name"
             android:parentActivityName=".Knot"/>
     </application>
+
 
 </manifest>
