--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
+        }
     buildTypes {
         release {
             minifyEnabled false
@@ -39,7 +39,5 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:1.1.+'
     implementation 'com.github.yesidlazaro:GmailBackground:1.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
-
-
-
